antlr-files/lib/statParser.js
// Generated from stat.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var statListener = require('./statListener').statListener;
var statVisitor = require('./statVisitor').statVisitor;

var grammarFileName = "stat.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "';'", "','", "'.'", 
                     "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'='", 
                     "'class'", "'extends'", "'int'", "'string'", "'constructor'", 
                     "'break'", "'print'", "'read'", "'return'", "'super'", 
                     "'if'", "'ife'", "'else'", "'method'", "'for'", "'new'", 
                     "'null'" ];

var symbolicNames = [ null, "WS", "LeftParen", "RightParen", "LeftBracket", 
                      "RightBracket", "LeftBrace", "RightBrace", "Plus", 
                      "Minus", "Star", "Div", "Mod", "Semi", "Comma", "Dot", 
                      "Less", "LessEqual", "Greater", "GreaterEqual", "Equal", 
                      "NotEqual", "Assign", "Class", "Extends", "Int", "String", 
                      "Constructor", "Break", "Print", "Read", "Return", 
                      "Super", "If", "Ife", "Else", "Method", "For", "New", 
                      "Null", "Identifier", "IntConstant", "StringConstant" ];

var ruleNames =  [ "statement", "varoratrib", "atribstat", "atribstatb", 
                   "printstat", "readstat", "returnstat", "returnstatb", 
                   "superstat", "ifstat", "forstat", "statlist", "statlistb", 
                   "numexpression", "terms", "term", "unaryexprs", "unaryexpr", 
                   "factor", "lvalue", "lvalueb", "brackets", "multivardecl", 
                   "vardeclcomma" ];

function statParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

statParser.prototype = Object.create(antlr4.Parser.prototype);
statParser.prototype.constructor = statParser;

Object.defineProperty(statParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

statParser.EOF = antlr4.Token.EOF;
statParser.WS = 1;
statParser.LeftParen = 2;
statParser.RightParen = 3;
statParser.LeftBracket = 4;
statParser.RightBracket = 5;
statParser.LeftBrace = 6;
statParser.RightBrace = 7;
statParser.Plus = 8;
statParser.Minus = 9;
statParser.Star = 10;
statParser.Div = 11;
statParser.Mod = 12;
statParser.Semi = 13;
statParser.Comma = 14;
statParser.Dot = 15;
statParser.Less = 16;
statParser.LessEqual = 17;
statParser.Greater = 18;
statParser.GreaterEqual = 19;
statParser.Equal = 20;
statParser.NotEqual = 21;
statParser.Assign = 22;
statParser.Class = 23;
statParser.Extends = 24;
statParser.Int = 25;
statParser.String = 26;
statParser.Constructor = 27;
statParser.Break = 28;
statParser.Print = 29;
statParser.Read = 30;
statParser.Return = 31;
statParser.Super = 32;
statParser.If = 33;
statParser.Ife = 34;
statParser.Else = 35;
statParser.Method = 36;
statParser.For = 37;
statParser.New = 38;
statParser.Null = 39;
statParser.Identifier = 40;
statParser.IntConstant = 41;
statParser.StringConstant = 42;

statParser.RULE_statement = 0;
statParser.RULE_varoratrib = 1;
statParser.RULE_atribstat = 2;
statParser.RULE_atribstatb = 3;
statParser.RULE_printstat = 4;
statParser.RULE_readstat = 5;
statParser.RULE_returnstat = 6;
statParser.RULE_returnstatb = 7;
statParser.RULE_superstat = 8;
statParser.RULE_ifstat = 9;
statParser.RULE_forstat = 10;
statParser.RULE_statlist = 11;
statParser.RULE_statlistb = 12;
statParser.RULE_numexpression = 13;
statParser.RULE_terms = 14;
statParser.RULE_term = 15;
statParser.RULE_unaryexprs = 16;
statParser.RULE_unaryexpr = 17;
statParser.RULE_factor = 18;
statParser.RULE_lvalue = 19;
statParser.RULE_lvalueb = 20;
statParser.RULE_brackets = 21;
statParser.RULE_multivardecl = 22;
statParser.RULE_vardeclcomma = 23;


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.Int = function() {
    return this.getToken(statParser.Int, 0);
};

StatementContext.prototype.Identifier = function() {
    return this.getToken(statParser.Identifier, 0);
};

StatementContext.prototype.brackets = function() {
    return this.getTypedRuleContext(BracketsContext,0);
};

StatementContext.prototype.multivardecl = function() {
    return this.getTypedRuleContext(MultivardeclContext,0);
};

StatementContext.prototype.Semi = function() {
    return this.getToken(statParser.Semi, 0);
};

StatementContext.prototype.String = function() {
    return this.getToken(statParser.String, 0);
};

StatementContext.prototype.varoratrib = function() {
    return this.getTypedRuleContext(VaroratribContext,0);
};

StatementContext.prototype.printstat = function() {
    return this.getTypedRuleContext(PrintstatContext,0);
};

StatementContext.prototype.readstat = function() {
    return this.getTypedRuleContext(ReadstatContext,0);
};

StatementContext.prototype.returnstat = function() {
    return this.getTypedRuleContext(ReturnstatContext,0);
};

StatementContext.prototype.superstat = function() {
    return this.getTypedRuleContext(SuperstatContext,0);
};

StatementContext.prototype.ifstat = function() {
    return this.getTypedRuleContext(IfstatContext,0);
};

StatementContext.prototype.forstat = function() {
    return this.getTypedRuleContext(ForstatContext,0);
};

StatementContext.prototype.LeftBrace = function() {
    return this.getToken(statParser.LeftBrace, 0);
};

StatementContext.prototype.statlist = function() {
    return this.getTypedRuleContext(StatlistContext,0);
};

StatementContext.prototype.RightBrace = function() {
    return this.getToken(statParser.RightBrace, 0);
};

StatementContext.prototype.Break = function() {
    return this.getToken(statParser.Break, 0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.StatementContext = StatementContext;

statParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, statParser.RULE_statement);
    try {
        this.state = 83;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case statParser.Int:
            this.enterOuterAlt(localctx, 1);
            this.state = 48;
            this.match(statParser.Int);
            this.state = 49;
            this.match(statParser.Identifier);
            this.state = 50;
            this.brackets();
            this.state = 51;
            this.multivardecl();
            this.state = 52;
            this.match(statParser.Semi);
            break;
        case statParser.String:
            this.enterOuterAlt(localctx, 2);
            this.state = 54;
            this.match(statParser.String);
            this.state = 55;
            this.match(statParser.Identifier);
            this.state = 56;
            this.brackets();
            this.state = 57;
            this.multivardecl();
            this.state = 58;
            this.match(statParser.Semi);
            break;
        case statParser.Identifier:
            this.enterOuterAlt(localctx, 3);
            this.state = 60;
            this.match(statParser.Identifier);
            this.state = 61;
            this.varoratrib();
            break;
        case statParser.Print:
            this.enterOuterAlt(localctx, 4);
            this.state = 62;
            this.printstat();
            this.state = 63;
            this.match(statParser.Semi);
            break;
        case statParser.Read:
            this.enterOuterAlt(localctx, 5);
            this.state = 65;
            this.readstat();
            this.state = 66;
            this.match(statParser.Semi);
            break;
        case statParser.Return:
            this.enterOuterAlt(localctx, 6);
            this.state = 68;
            this.returnstat();
            this.state = 69;
            this.match(statParser.Semi);
            break;
        case statParser.Super:
            this.enterOuterAlt(localctx, 7);
            this.state = 71;
            this.superstat();
            this.state = 72;
            this.match(statParser.Semi);
            break;
        case statParser.If:
        case statParser.Ife:
            this.enterOuterAlt(localctx, 8);
            this.state = 74;
            this.ifstat();
            break;
        case statParser.For:
            this.enterOuterAlt(localctx, 9);
            this.state = 75;
            this.forstat();
            break;
        case statParser.LeftBrace:
            this.enterOuterAlt(localctx, 10);
            this.state = 76;
            this.match(statParser.LeftBrace);
            this.state = 77;
            this.statlist();
            this.state = 78;
            this.match(statParser.RightBrace);
            break;
        case statParser.Break:
            this.enterOuterAlt(localctx, 11);
            this.state = 80;
            this.match(statParser.Break);
            this.state = 81;
            this.match(statParser.Semi);
            break;
        case statParser.Semi:
            this.enterOuterAlt(localctx, 12);
            this.state = 82;
            this.match(statParser.Semi);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VaroratribContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_varoratrib;
    return this;
}

VaroratribContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VaroratribContext.prototype.constructor = VaroratribContext;

VaroratribContext.prototype.Identifier = function() {
    return this.getToken(statParser.Identifier, 0);
};

VaroratribContext.prototype.brackets = function() {
    return this.getTypedRuleContext(BracketsContext,0);
};

VaroratribContext.prototype.multivardecl = function() {
    return this.getTypedRuleContext(MultivardeclContext,0);
};

VaroratribContext.prototype.Semi = function() {
    return this.getToken(statParser.Semi, 0);
};

VaroratribContext.prototype.lvalue = function() {
    return this.getTypedRuleContext(LvalueContext,0);
};

VaroratribContext.prototype.Assign = function() {
    return this.getToken(statParser.Assign, 0);
};

VaroratribContext.prototype.atribstatb = function() {
    return this.getTypedRuleContext(AtribstatbContext,0);
};

VaroratribContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterVaroratrib(this);
	}
};

VaroratribContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitVaroratrib(this);
	}
};

VaroratribContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitVaroratrib(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.VaroratribContext = VaroratribContext;

statParser.prototype.varoratrib = function() {

    var localctx = new VaroratribContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, statParser.RULE_varoratrib);
    try {
        this.state = 95;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case statParser.Identifier:
            this.enterOuterAlt(localctx, 1);
            this.state = 85;
            this.match(statParser.Identifier);
            this.state = 86;
            this.brackets();
            this.state = 87;
            this.multivardecl();
            this.state = 88;
            this.match(statParser.Semi);
            break;
        case statParser.LeftBracket:
        case statParser.Dot:
        case statParser.Assign:
            this.enterOuterAlt(localctx, 2);
            this.state = 90;
            this.lvalue();
            this.state = 91;
            this.match(statParser.Assign);
            this.state = 92;
            this.atribstatb();
            this.state = 93;
            this.match(statParser.Semi);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AtribstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_atribstat;
    return this;
}

AtribstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AtribstatContext.prototype.constructor = AtribstatContext;

AtribstatContext.prototype.Identifier = function() {
    return this.getToken(statParser.Identifier, 0);
};

AtribstatContext.prototype.lvalue = function() {
    return this.getTypedRuleContext(LvalueContext,0);
};

AtribstatContext.prototype.Assign = function() {
    return this.getToken(statParser.Assign, 0);
};

AtribstatContext.prototype.atribstatb = function() {
    return this.getTypedRuleContext(AtribstatbContext,0);
};

AtribstatContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterAtribstat(this);
	}
};

AtribstatContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitAtribstat(this);
	}
};

AtribstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitAtribstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.AtribstatContext = AtribstatContext;

statParser.prototype.atribstat = function() {

    var localctx = new AtribstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, statParser.RULE_atribstat);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.match(statParser.Identifier);
        this.state = 98;
        this.lvalue();
        this.state = 99;
        this.match(statParser.Assign);
        this.state = 100;
        this.atribstatb();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AtribstatbContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_atribstatb;
    return this;
}

AtribstatbContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AtribstatbContext.prototype.constructor = AtribstatbContext;

AtribstatbContext.prototype.numexpression = function() {
    return this.getTypedRuleContext(NumexpressionContext,0);
};

AtribstatbContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterAtribstatb(this);
	}
};

AtribstatbContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitAtribstatb(this);
	}
};

AtribstatbContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitAtribstatb(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.AtribstatbContext = AtribstatbContext;

statParser.prototype.atribstatb = function() {

    var localctx = new AtribstatbContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, statParser.RULE_atribstatb);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.numexpression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrintstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_printstat;
    return this;
}

PrintstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrintstatContext.prototype.constructor = PrintstatContext;

PrintstatContext.prototype.Print = function() {
    return this.getToken(statParser.Print, 0);
};

PrintstatContext.prototype.numexpression = function() {
    return this.getTypedRuleContext(NumexpressionContext,0);
};

PrintstatContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterPrintstat(this);
	}
};

PrintstatContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitPrintstat(this);
	}
};

PrintstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitPrintstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.PrintstatContext = PrintstatContext;

statParser.prototype.printstat = function() {

    var localctx = new PrintstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, statParser.RULE_printstat);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.match(statParser.Print);
        this.state = 105;
        this.numexpression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReadstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_readstat;
    return this;
}

ReadstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReadstatContext.prototype.constructor = ReadstatContext;

ReadstatContext.prototype.Read = function() {
    return this.getToken(statParser.Read, 0);
};

ReadstatContext.prototype.Identifier = function() {
    return this.getToken(statParser.Identifier, 0);
};

ReadstatContext.prototype.lvalue = function() {
    return this.getTypedRuleContext(LvalueContext,0);
};

ReadstatContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterReadstat(this);
	}
};

ReadstatContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitReadstat(this);
	}
};

ReadstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitReadstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.ReadstatContext = ReadstatContext;

statParser.prototype.readstat = function() {

    var localctx = new ReadstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, statParser.RULE_readstat);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.match(statParser.Read);
        this.state = 108;
        this.match(statParser.Identifier);
        this.state = 109;
        this.lvalue();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReturnstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_returnstat;
    return this;
}

ReturnstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnstatContext.prototype.constructor = ReturnstatContext;

ReturnstatContext.prototype.Return = function() {
    return this.getToken(statParser.Return, 0);
};

ReturnstatContext.prototype.returnstatb = function() {
    return this.getTypedRuleContext(ReturnstatbContext,0);
};

ReturnstatContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterReturnstat(this);
	}
};

ReturnstatContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitReturnstat(this);
	}
};

ReturnstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitReturnstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.ReturnstatContext = ReturnstatContext;

statParser.prototype.returnstat = function() {

    var localctx = new ReturnstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, statParser.RULE_returnstat);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this.match(statParser.Return);
        this.state = 112;
        this.returnstatb();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReturnstatbContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_returnstatb;
    return this;
}

ReturnstatbContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnstatbContext.prototype.constructor = ReturnstatbContext;

ReturnstatbContext.prototype.numexpression = function() {
    return this.getTypedRuleContext(NumexpressionContext,0);
};

ReturnstatbContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterReturnstatb(this);
	}
};

ReturnstatbContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitReturnstatb(this);
	}
};

ReturnstatbContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitReturnstatb(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.ReturnstatbContext = ReturnstatbContext;

statParser.prototype.returnstatb = function() {

    var localctx = new ReturnstatbContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, statParser.RULE_returnstatb);
    try {
        this.state = 116;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case statParser.LeftParen:
        case statParser.Plus:
        case statParser.Minus:
        case statParser.Null:
        case statParser.Identifier:
        case statParser.IntConstant:
        case statParser.StringConstant:
            this.enterOuterAlt(localctx, 1);
            this.state = 114;
            this.numexpression();
            break;
        case statParser.Semi:
            this.enterOuterAlt(localctx, 2);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SuperstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_superstat;
    return this;
}

SuperstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SuperstatContext.prototype.constructor = SuperstatContext;

SuperstatContext.prototype.Super = function() {
    return this.getToken(statParser.Super, 0);
};

SuperstatContext.prototype.LeftParen = function() {
    return this.getToken(statParser.LeftParen, 0);
};

SuperstatContext.prototype.IntConstant = function() {
    return this.getToken(statParser.IntConstant, 0);
};

SuperstatContext.prototype.RightParen = function() {
    return this.getToken(statParser.RightParen, 0);
};

SuperstatContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterSuperstat(this);
	}
};

SuperstatContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitSuperstat(this);
	}
};

SuperstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitSuperstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.SuperstatContext = SuperstatContext;

statParser.prototype.superstat = function() {

    var localctx = new SuperstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, statParser.RULE_superstat);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 118;
        this.match(statParser.Super);
        this.state = 119;
        this.match(statParser.LeftParen);
        this.state = 120;
        this.match(statParser.IntConstant);
        this.state = 121;
        this.match(statParser.RightParen);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IfstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_ifstat;
    return this;
}

IfstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfstatContext.prototype.constructor = IfstatContext;

IfstatContext.prototype.If = function() {
    return this.getToken(statParser.If, 0);
};

IfstatContext.prototype.LeftParen = function() {
    return this.getToken(statParser.LeftParen, 0);
};

IfstatContext.prototype.numexpression = function() {
    return this.getTypedRuleContext(NumexpressionContext,0);
};

IfstatContext.prototype.RightParen = function() {
    return this.getToken(statParser.RightParen, 0);
};

IfstatContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

IfstatContext.prototype.Ife = function() {
    return this.getToken(statParser.Ife, 0);
};

IfstatContext.prototype.Else = function() {
    return this.getToken(statParser.Else, 0);
};

IfstatContext.prototype.enterRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.enterIfstat(this);
	}
};

IfstatContext.prototype.exitRule = function(listener) {
    if(listener instanceof statListener ) {
        listener.exitIfstat(this);
	}
};

IfstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof statVisitor ) {
        return visitor.visitIfstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




statParser.IfstatContext = IfstatContext;

statParser.prototype.ifstat = function() {

    var localctx = new IfstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, statParser.RULE_ifstat);
    try {
        this.state = 137;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case statParser.If:
            this.enterOuterAlt(localctx, 1);
            this.state = 123;
            this.match(statParser.If);
            this.state = 124;
            this.match(statParser.LeftParen);
            this.state = 125;
            this.numexpression();
            this.state = 126;
            this.match(statParser.RightParen);
            this.state = 127;
            this.statement();
            break;
        case statParser.Ife:
            this.enterOuterAlt(localctx, 2);
            this.state = 129;
            this.match(statParser.Ife);
            this.state = 130;
            this.match(statParser.LeftParen);
            this.state = 131;
            this.numexpression();
            this.state = 132;
            this.match(statParser.RightParen);
            this.state = 133;
            this.statement();
            this.state = 134;
            this.match(statParser.Else);
            this.state = 135;
            this.statement();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ForstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = statParser.RULE_forstat;
    return this;
}

ForstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForstatContext.prototype.constructor = ForstatContext;

ForstatContext.prototype.For = function() {
    return this.getToken(statParser.For, 0);
};

ForstatContext.prototype.LeftParen = function() {
    return this.getToken(statParser.LeftParen, 0);
};

ForstatContext.prototype.atribstat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AtribstatContext);
    } else {
        return this.getTypedRuleContext(AtribstatContext,i);
    }
};

ForstatContext.prototype.Semi = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(statParser.Semi);
    } else {
        return this.getToken(statParser.Semi, i);
    }
};

